# High-Performance-Distributed-Inference-Engine

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
cpp-sidecar/: CMakeLists.txt  Dockerfile
cpp-sidecar/include/: metrics.hpp  queue.hpp  server.hpp  uds_client.hpp
cpp-sidecar/src/: main.cpp  metrics.cpp  queue.cpp  server.cpp  uds_client.cpp
k8s/: configmap.yaml  deployment.yaml  service.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml
load-testing/: locustfile.py
python-worker/: Dockerfile  requirements.txt
python-worker/src/: profile_inference.py  rope_kernel.py  worker.py
python-worker/src/cuda_kernels/: README_rmsnorm.md  rmsnorm_binding.cpp  rmsnorm_kernel.cu  setup.py
scripts/: benchmark.py  benchmark_rmsnorm.py  download_hf_model.py  download_model.sh  minikube_setup.sh  profile_rmsnorm.sh
